--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,4 +1,5 @@
 /* Index Hero Start */
+html {scroll-behavior:smooth}
 .hero__content {
   display: grid;
   grid-template-columns: auto auto;
@@ -236,42 +237,34 @@
 }
 /* Testimonial Start */ 
 
+
 // Banner svg image annimate
 
-// .hero__img_svg>path{opacity: 0;}
+@keyframes HeroGlobalimg {
+  100% {
+    opacity: 1;
+    // -webkit-transform: rotate(-40deg);
+  }
 
-@keyframes HeroSnake {
-    // 30%{ opacity: 0.2;}
-    // 50%{ opacity: 0.5;}
-    // 100% {
-    //   opacity: 1;
-    //   -webkit-transform: rotate(10deg);
-    // }
-    from {
-      -webkit-transform: rotate(0deg);
-    }
-    to {
-        -webkit-transform: rotate(359deg);
-    }
+  from {
+      -webkit-transform: rotate(0deg) skew(-5deg);
+  }
+  to {
+          -webkit-transform: rotate(359deg) skew(5deg);
+  }
 }
 
 .hero__img_svg {
-  animation: HeroSnake 40s linear forwards infinite;
+  animation: HeroGlobalimg 40s linear forwards infinite;
 }
 
-// @for $i from 1 through 1000 {
-//     .hero__img_svg  path:nth-child(#{$i}) {
-//       animation: HeroSnake 10s linear ($i * 0.01)+s  forwards infinite;
-//     }
-// }
 // Banner svg image annimate end
-
 
 // global map annimate rotate 
 @keyframes HeroGlobal {
     100% {
       opacity: 1;
-      -webkit-transform: rotate(-40deg);
+      // -webkit-transform: rotate(-40deg);
     }
 
     from {
@@ -281,34 +274,64 @@
             -webkit-transform: rotate(-359deg);
     }
 }
-
-.index__img_global{
-    animation: HeroGlobal 20s linear forwards infinite;
+.is-visible .index__img_global{
+    animation: HeroGlobal 20s linear forwards ;
 }
 
 // global map annimate rotate end
 
-// annimate map dotted pulsed 
-@keyframes pulse {
-	100% {transform: scale(1.1)}
+// annimate map dotted pulsed--------------------
+
+@keyframes dotpulse {
+	// 100% {transform: rotate(45deg)}
+  from, to {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  
 }
 
-@for $i from 1 through 1000 {
-    .svg_map_dot  path:nth-child(#{$i}) {
-      animation: pulse 1s linear infinite alternate;
-    }
+@keyframes linemove {
+	
+  0% {
+    stroke-dasharray: 20;
+    stroke-dashoffset: 20;
 }
-// annimate map dotted pulsed end
-
-// map annimate when hover on any element eg: Dell, Lenovo
-
-.global__line__map path {stroke : #0FF; opacity: 1; stroke-width: 2;}
-
-.nav__item:hover {
-  .global__line__map path {stroke : #FF0; opacity: 1; stroke-width: 2;}
+30% {
+    stroke-dasharray: 20;
+    stroke-dashoffset: 200;
+}
+50% {
+    stroke-dasharray: 60;
+    stroke-dashoffset: 400;
+}
+80% {
+    stroke-dasharray: 30;
+    stroke-dashoffset: 200;
+}
+100% {
+    stroke-dasharray: 20;
+    stroke-dashoffset: 20;
+}
+  
 }
 
-// map annimate when hover on any element eg: Dell, Lenovo end
+
+
+.is-connect-visible .connectdot{animation: dotpulse 1s linear infinite;}
+
+.is-connect-visible .connectline{ animation: linemove 5s linear infinite;}
+
+// @for $i from 1 through 1000 {
+//     .svg_map_dot  path:nth-child(#{$i}) {
+//       animation: pulse 1s linear infinite alternate;
+//     }
+// }
+
+// annimate map dotted pulsed end--------------------
+
 /* Testimonial Start */
 
 .mouseenter .cursor {
@@ -361,3 +384,5 @@
     transform: scale(0.9);
   }
 }
+
+
