--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -286,3 +286,109 @@
     transform: scale(0.9);
   }
 }
+
+
+
+
+//  /// ////////////////////////////////////////
+
+.hero__heading{
+  overflow: hidden;
+  height: 120px;
+  span{
+    display: inline-block;
+  }
+  > span {
+    opacity: 0;
+    transition: 0.7s linear;
+  }
+  > span.active{
+    opacity: 1;
+  }
+}
+
+
+@keyframes fadeInUp {
+  0%{
+    transform: translateY(20px);
+  }
+  50%{
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInDown {
+  0%{
+    transform: translateY(0);
+  }
+  80%{
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+}
+@keyframes fadeInLeft {
+  0%{
+    transform: translateX(-20px);
+  }
+  50%{
+    opacity: 0.5;
+  }
+  100% {
+      transform: translateX(0);
+      opacity: 1;
+  }
+}
+
+@keyframes fadeInRight {
+  0%{
+    transform: translateX(20px);
+  }
+  50%{
+    opacity: 0.5;
+  }
+  100% {
+      transform: translateX(0);
+      opacity: 1;
+  }
+}
+
+
+.hero__heading .active .fspan,
+.hero__heading .active .lspan {
+  animation-duration: 0.5s;
+  animation-delay: 1s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+
+
+.hero__heading .active .fadeInDown{
+  animation-name: fadeInDown; 
+  animation-duration: 0.5s;
+  animation-delay: 2.5s;
+  opacity: 1;
+}
+
+.hero__heading .active .fadeInLeft{
+  animation-name: fadeInLeft; 
+  opacity: 0;
+}
+
+.hero__heading .active .fadeInRight{
+  animation-name: fadeInRight; 
+  opacity: 0;
+
+}
+.hero__heading .active .fadeInUp{
+  animation-name: fadeInUp; 
+  opacity: 0;
+}
