--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -308,7 +308,7 @@
 .is-connect-visible .connectline {
   stroke-dasharray: 450;
   stroke-dashoffset: 450;
-  animation: linemove 2s linear  infinite alternate;
+  animation: linemove 5s linear infinite alternate;
 }
 
 // @for $i from 1 through 1000 {
@@ -467,4 +467,11 @@
 .hero__heading .active .fadeInUp {
   animation-name: fadeInUp;
   opacity: 0;
+}
+
+.logo__list li:hover {
+
+  background-color: rgba(201, 199, 199, 0.2);
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
 }
