--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -444,7 +444,7 @@
   }
   > span {
     opacity: 0;
-    transition: 0.7s linear;
+    transition: 1s linear;
   }
   > span.active {
     opacity: 1;
@@ -531,16 +531,16 @@
   opacity: 0;
 }
 
-.logo__list li:hover {
+.logo__list li{
+  transition: 0.5s;
+}
 
+.logo__list li:hover {
   background-color: rgba(201, 199, 199, 0.2);
-	-webkit-transform: scale(1.1);
-	transform: scale(1.1);
 }
 
 .tmb__hero__sec{
   position: relative;
-  // overflow-x: hidden;
   .connect_hero_global_map{
     position: absolute;
     top: 38%;
