--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -632,32 +632,54 @@
 
 .dots{
   background: radial-gradient(50% 50% at 50% 50%, #7D90D0 0%, rgba(212, 219, 252, 0.5) 33.85%, rgba(212, 219, 252, 0.15) 71.88%, rgba(212, 219, 252, 0) 100%);
-  opacity: 0.7;
+  opacity: 0;
 }
 .profilecircle1{
   width: 20px;
   height: 20px;
   margin-left: 10px;
+  transition-delay: 2s;
 }
 .profilecircle2{
   width: 30px;
   height: 30px;
-  
   margin-left: 37px;
-
+  transition-delay: 4s;
 }
 .profilecircle3{
   width: 50px;
   height: 50px;
   margin-left: 68px;
+  transition-delay: 6s;
 }
 .profilecircle4{
   width: 80px;
   height: 80px;
   margin-left: 60px;
+  transition-delay: 8s;
 }
 .profilecircle5{
   width: 100px;
   height: 100px;
   margin-left: 30px;
+  transition-delay: 10s;
 }
+
+@keyframes fadeInDots {
+  0% {
+    opacity: 0;
+  }
+ 
+  100% {
+    opacity: 0.7;
+  }
+}
+
+@for $i from 1 through 5 {
+    .dots__wrapper div:nth-child(#{$i}) {
+      animation: fadeInDots $i+s linear forwards infinite;
+    }
+}
+// .dots__wrapper .is-dot-visible .dots{
+//   animation: fadeInDots  3.5s  linear forwards;
+// }
